# streamlit-modern-select

./: Makefile  README.md  pyproject.toml
modern_select/: __init__.py  example.py
modern_select/frontend/: package-lock.json
modern_select/frontend/src/: ModernSelect.tsx  index.tsx
streamlit_modern_select/: __init__.py
streamlit_modern_select/frontend/: package-lock.json  package.json
streamlit_modern_select/frontend/src/: ModernSelect.tsx  index.tsx
