[project]
name = "streamlit-modern-select"
version = "0.1.2"
description = "Streamlit component that allows you to display a selectbox with size >= 1"
authors = [{ name = "Frank Hoffsümmer", email = "frank.hoffsummer@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
include = [
    "modern_select/frontend/build"
]
exclude = [
    "streamlit_modern_select/frontend/.prettierrc",
    "streamlit_modern_select/frontend/node_modules",
    "streamlit_modern_select/frontend/package*",
    "streamlit_modern_select/frontend/public",
    "streamlit_modern_select/frontend/src",
    "streamlit_modern_select/frontend/tsconfig.json",
]
dependencies = [
    "playwright >= 1.47.0",
    "streamlit >= 1.38.0",
    "watchdog >= 4.0.2",
]

[tool.uv]
package = true
python-preference = "managed"
dev-dependencies = [
    "pytest >= 8.3.3",
    "ruff >= 0.6.7",
]

[tool.hatch.build.targets.wheel]
packages = ["streamlit_modern_select"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
